Post-v2.7.0
---------------------
   - Tunnels:
     * Added support to set packet mark for tunnel endpoint using
       `egress_pkt_mark` OVSDB option.
   - EMC insertion probability is reduced to 1% and is configurable via
     the new 'other_config:emc-insert-inv-prob' option.
   - DPDK:
     * DPDK log messages redirected to OVS logging subsystem.
       Log level can be changed in a usual OVS way using
       'ovs-appctl vlog' commands for 'dpdk' module. Lower bound
       still can be configured via extra arguments for DPDK EAL.
   - IPFIX now provides additional counters for totals since startup.
   - New support for multiple VLANs (802.1ad or "QinQ"), including a new
     "dot1q-tunnel" port VLAN mode.
   - In ovn-vsctl and vtep-ctl, record UUIDs in commands may now be
     abbreviated to 4 hex digits.
   - OVN:
     * New built-in DNS support.
     * IPAM for IPv4 can now exclude user-defined addresses from assignment.
     * IPAM can now assign IPv6 addresses.
     * Make the DHCPv4 router setting optional.
     * Gratuitous ARP for NAT addresses on a distributed logical router.
     * Allow ovn-controller SSL configuration to be obtained from vswitchd
       database.
     * ovn-trace now has basic support for tracing distributed firewalls.
     * In ovn-nbctl and ovn-sbctl, record UUIDs in commands may now be
       abbreviated to 4 hex digits.
     * "ovn-sbctl lflow-list" can now print OpenFlow flows that correspond
       to logical flows.
   - Add the command 'ovs-appctl stp/show' (see ovs-vswitchd(8)).
   - OpenFlow:
     * All features required by OpenFlow 1.4 are now implemented, so
       ovs-vswitchd now enables OpenFlow 1.4 by default (in addition to
       OpenFlow 1.0 to 1.3).
     * Increased support for OpenFlow 1.6 (draft).
     * Bundles now support hashing by just nw_src or nw_dst.
     * The "learn" action now supports a "limit" option (see ovs-ofctl(8)).
     * The port status bit OFPPS_LIVE now reflects link aliveness.